agregando clase 9 y lo modificado de la 5

--- a/clase5/ejercicios.html
+++ b/clase5/ejercicios.html
@@ -47,15 +47,15 @@
     -->
 
     <!-- 12 -->
-    <!-- <form onsubmit="return enviarFormulario()">
+    <form onsubmit="return enviarFormulario()">
 		<label for="ancho">Ancho de la caja (en centímetros):</label><br>
 		<input type="number" id="ancho" name="ancho"><br>
 
 		<label for="alto">Alto de la caja (en centímetros):</label><br>
 		<input type="number" id="alto" name="alto"><br>
 
-		<label for="largo">Largo de la caja (en centímetros):</label><br>
-		<input type="number" id="largo" name="largo"><br>
+		<label for="largo">Largo de la caja es "Chica, Mediana o Grande"</label><br>
+		<input type="text" id="largo" name="largo"><br>
 
 		<label for="peso">Peso de la caja (en kilogramos):</label><br>
 		<input type="number" id="peso" name="peso"><br>
@@ -64,7 +64,7 @@
 		<textarea id="direccion" name="direccion"></textarea><br>
 
 		<input type="submit" value="Enviar formulario">
-	</form> -->
+	</form>
 
     <!-- 13 -->
     <!-- <h1>Juego de adivinanza</h1>
