creo que la clase 10 no esta completa y me falta la clase 12

--- a/clase10/ejercicio/index.html
+++ b/clase10/ejercicio/index.html
@@ -4,17 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <title>Document</title>
     <style>
         body{
             background-color: black;
             color: aliceblue;
         }
+          /* Estilos para la tabla */
+        table {
+            border-collapse: collapse;
+        }
+        td {
+            padding: 10px;
+            border: 1px solid black;
+        }
+        /* Estilo para el color de fondo al ser presionado */
+        .resaltado {
+            background-color: yellow;
+        }
     </style>
 </head>
 <body>
     <h1>ejercicios clase 10 </h1>
 
+    <!-- Ejercicio 10 -->
+    <p id="primer-parrafo">Este es el primer párrafo.</p>
+    <p id="segundo-parrafo">Este es el segundo párrafo.</p>
+    <!-- ej 11 -->
+    <table>
+        <tr>
+          <td>Primera fila, primera columna</td>
+          <td>Primera fila, segunda columna</td>
+        </tr>
+        <tr>
+          <td>Segunda fila, primera columna</td>
+          <td>Segunda fila, segunda columna</td>
+        </tr>
+    </table>
+       <!--ej12  -->
+      <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>
+      </ul>
+
     <script src="index.js"></script>
+
 </body>
 </html>
